cluster/apps/media/radarr/app/ingress-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-api
  namespace: media

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.${SECRET_DEV_DOMAIN}`) && Headers(`apikey`, `fortestingonly`) && PathPrefix(`/`) 
      kind: Rule
      services:
        - name: radarr
          port: 8989
  tls:
    secretName: radarr.${SECRET_DEV_DOMAIN}
