cluster/apps/media/radarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "alpha-r-box-outline"
      #cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  namespace: media
  name: &appname radarr
spec:
  rules:
  - host: &uri radarr.${SECRET_DEV_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 7878
  tls:
  - hosts:
    - *uri
    secretName: *appname
